--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,6 +1,6 @@
 numpy
 pandas
-opencv-python
+opencv-python-headless
 scikit-learn
 matplotlib
 joblib
@@ -8,3 +8,4 @@ tqdm
 tensorflow>=2.10
 streamlit
 scikit-image
+
